--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ install:
   - npm install
 
 # Post-install test scripts.
-test_scripts:
-  #Output useful info for debugging.
+test_script:
+  # Output useful info for debugging.
   - node --version
   - npm --version
   # run tests
